--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@
 
 body{
     font-family: "Azeret Mono";
+    /* background-color: #0D1321; */
 }
 .navi{
     display: flex;
@@ -78,6 +79,7 @@ body{
  width: 1440px;
  /* border: 2px solid black; */
  margin: auto;
+ 
 }
 
 .para{
@@ -95,3 +97,149 @@ body{
     
 }
 
+.card2{
+    height: 1393px;
+    width: 1140px;
+/* border: 2px solid black; */
+background-color: rbg(250,250,251);
+
+
+
+}
+.all{
+    display: flex;
+    text-align: center;
+    position: relative;
+    top: 0px;
+
+}
+
+.card21{
+    width: 946px;
+    height: 336px;
+    /* padding: 10px; */
+    /* display: flex;
+    justify-content: space-between; */
+    
+}
+
+.btn1{
+    background-color: white;
+    width: 208px;
+    height: 66px;
+    color: #373A50;
+    font-size: large;
+    font-family: "Azeret Mono";
+    
+    /* border-radius: 10px; */
+}
+
+.tex21{
+    width: 477px;
+    height: 220px;
+    position: relative;
+    left: 62px;
+   
+    
+    /* border: 2px solid black; */
+    
+   
+}
+
+.tex211{
+
+    color: #373A50;
+    padding-bottom: 5px;
+    position: relative;
+    left: 62px;
+}
+.pic3{
+    width: 274.17px;
+    height: 240px;
+    /* border: 2px solid red; */
+    position: relative;
+    left: 589px;
+    top: -163px;
+}
+
+
+.pic4{
+    width: 274.17px;
+    height: 240px;
+    /* border: 2px solid red; */
+    position: relative;
+    left: 14px;
+    top: -153px;
+}
+.pic5{
+
+    width: 274.17px;
+    height: 240px;
+    /* border: 2px solid red; */
+    position: relative;
+    left: 589px;
+    top: -163px;
+}
+
+.tex212{
+    width: 477px;
+    height: 220px;
+    position: relative;
+    top: -357px;
+    left: 339px;
+    
+   
+}
+.tex213{
+    width: 477px;
+    height: 220px;
+    position: relative;
+    top: -207px;
+    left: 62px;
+   
+    
+ 
+    
+   
+}
+
+.youtube{
+    width: 1140px;
+    height: 775px;
+    /* border: 2px solid black; */
+    margin: auto;
+}
+.t1{
+    position: relative;
+    left: 29px;
+}
+.para5{
+    width: 852px;
+    position: relative;
+    top: 20px;
+}
+.card3{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+.tex111{
+    width: 852px;
+    height: 52px;
+    /* padding-bottom: 50px; */
+}
+.video{
+    width: 1140px;
+    height: 614px;
+    /* border: 2px solid black; */
+    position: relative;
+    top: -627px;
+}
+.tar12{
+    width: 1140px;
+    height: 460px;
+    border: 10px solid black;
+    background-color: #0D1321;
+}
